# src/app/authentication/commons/constants/routes.go
@@ -1,8 +1,9 @@
 package constants
 
 const SwaggerRoute = "/swagger/*any"
-const AuthRoutePrefix = "/api/auth"
+const V1RoutePrefix = "/api/auth"
 const Signup = "/signup"
 const Signin = "/signin"
 const ForgotPassword = "/forgotpassword"
 const ValidateOtp = "/validateotp"
+const ChangePassword = "/changepassword"
